--- a/css/styles.css
+++ b/css/styles.css
@@ -1,169 +1,436 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.navbar{
-    display: flex;
-    padding: 2rem 4rem;
-    background-color: cornflowerblue;
-    justify-content: space-between;
+html{
+    font-family: "Lobster", sans-serif;
+    color: #000;
 }
-.navbar .navbarNav{
-    display: flex;
-    list-style: none;
+body{
+    background-color: #eee;
+    width: 100%;
 }
-.navbar .navbarNav li{
-   margin: 0 1rem;
-   list-style: none;
+main{
+    margin: auto;
+    width: 100%;
 }
-.navbar .navbarNav li a{
+p{
+    text-align: justify;
+    font-size: 1.2em;
+    line-height: 1.5;
+    font-weight: 300;
+    word-spacing: 2px;
+}
+h1, h2, h3, h4, h5{
+    font-family: "Oxygen";
+}
+h1 {
+    text-align: center;
+    margin-top: 1rem;
+    font-size: 5em;
+    letter-spacing: 0px;
+  }
+  
+  h2 {
+    font-size: 3em;
+    text-align: center;
+  }
+  
+  h3 {
+    font-size: 1.9em;
+  }
+  @media only screen and (max-width: 767px) {
+    h1 {
+      font-size: 4em;
+    }
+  }
+  
+  a {
     text-decoration: none;
-    color: rgb(0, 0, 0);
-}
-ul li a:hover{
-    background-color: rgb(236, 122, 179);
-}
-.navbarLogo{
-    height: 150px;
-    width: 170px;
-}
-.contenedorPresentacion{
-    margin-top: 20px;
+  }
+  
+  li {
+    list-style-type: none;
+  }
+  /* Estilo del logo en el nav*/
+.logoNav {
+    width: 3em;
+    height: auto;
+  }
+  /* Estilo de los banners*/
+.bannerPrincipal, .bannerServiciosHome, .bannerGaleria, .bannerGaleriaHome, .bannerSobreMi, .bannerContacto
+{
     display: flex;
-    padding: 4 rem;
-    grid-area: "s1";
-}
-.seccionSobreMi{
-    grid-area: "s2";
-}
-.video{
-    height: 150 px;
-    width: 200px;
-}
-.parrafo{
-    display: flex;
+    justify-content: center;
     align-items: center;
-}
-.footer{
-    display: flex;
-    padding: 2rem 4rem;
-    background-color: cornflowerblue;
-    justify-content: space-between;
-}
-.contenedorComentario{
-    display: flex;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    grid-area: "s3";
-}
-.imagenComentario{
-    display: flex;
-    height: 300px;
-    width: 300px;
-}
-.tituloComentario{
-    display: flex;
-    padding: 2 rem;
-    margin-top: 20px;
-    justify-content: space-around;
-}
-.contenedorMaquillaje{
-    display: flex;
-    flex-wrap: nowrap;
-    
-}
-.imagenMaquillaje{
-    display: flex;
-    height: 400px;
-    width: 400px;
+    flex-direction: column;
+    background-size: cover;
+    text-align: center;
+    padding: 1em;
+  }
+  .bannerPrincipal,
+.bannerServiciosHome {
+  background-attachment: fixed;
 }
 
-/*animación*/
-.parrafo{
-    animation-name: aparecer;
-    animation-duration: 5s;
-    
+.bannerPrincipal {
+  min-height: 92vh;
+  background-image: url("../assets/banner1.jpg");
 }
-@keyframes aparecer {
-    0%{
-        opacity: 0;
-    }
-    50%{
-        opacity: 0,5; 
-        
-    }
-    100%{
-        opacity: 1;
-    }
+
+.bannerPrincipal h1 {
+  color: #ffffff;
+  font-size: 2.3em;
+  letter-spacing: 0.7em;
+  font-weight: 500;
 }
-.container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 0.4fr 0.6fr 2fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    justify-content: stretch;
+
+.bannerServiciosHome {
+  background-image: url("../assets/banner2.jpg");
+  color: #ffffff;
+  background-position: center;
+  min-height: 40vh;
+}
+
+.bannerServiciosHome h3 {
+  font-size: 3.5em;
+}
+.bannerGaleriaHome {
+    background-color: #d4a1b1;
+    min-height: 40vh;
   }
-  /*Imagen maquillaje profesional*/
-  .imagenMP { grid-area: 2 / 1 / 3 / 2; }
-  
-  .descripciónMP {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    gap: 0px 0px;
-    grid-auto-flow: row;
-    grid-template-areas:
-      ". . ."
-      ". . ."
-      ". . .";
-    grid-area: 2 / 2 / 3 / 4;
+  .bannerServicios {
+    background-image: url("");
+    color: #ffffff;
+    background-position: center;
+    min-height: 40vh;
   }
   
-  /*Imagen maquillaje social*/
-  .imagenMS { grid-area: 3 / 1 / 4 / 4; }
-  
-  .descripciónMS { grid-area: 3 / 2 / 4 / 4; }
-  
-  /*Imagen maquillaje artistico*/
-  .imagenMA { grid-area: 1 / 1 / 2 / 2; }
-  
-  .descripciónMA { grid-area: 1 / 2 / 2 / 4; }
-  
-main{
-height: 700px;
-display: grid;
-grid-template-columns: 100%;
-grid-template-rows: 1fr 1fr 1fr;
-grid-template-areas: "s1"
-                      "s2"
-                      "s3";
-justify-content: center;
-align-items: center;                      
-}
-@media only screen and (min-widht:600px)
-{
-    main{
-        grid-template-columns: 70% 30%;
-        grid-template-rows: 50% 50%;
-        grid-template-areas: "s1 s3"
-                              "s2 s3";  
+  .bannerContacto {
+    background-image: url("");
+    color: #ffffff;
+    background-position: center;
+    min-height: 40vh;
+  }
+  @media only screen and (max-width: 767px) {
+    .bannerContacto h3 {
+      font-size: 1.5rem;
     }
-}
-@media only screen and (min-widht:992px)
-{
-    main{
-        height: auto;
-        grid-template-areas: 50% 50%;
-        grid-template-rows: 200px 400px 200px 400px 200px 400px;
-        grid-template-areas: ". ."
-                              "s1 s1"
-                              ". . "
-                              "s2 s2"
-                              ". ."
-                              "s3 s3"
-                              ". ."  ;
+    .bannerContacto h4 {
+      font-size: 1rem;
     }
-}
+  }
+  .bannerSobreMi {
+    background-image: url("");
+    color: #ffffff;
+    background-position: center;
+    min-height: 40vh;
+  }
+  
+  .bannerGaleria {
+    background-image: url("");
+    color: #ffffff;
+    background-position: center;
+    min-height: 40vh;
+  }
+  
+  /*Estilo de Servicios*/
+  .servicioContainer {
+    padding: 1em;
+    margin: 2rem 0;
+    border: 2px solid #000000;
+    background-color: rgba(40, 40, 40, 0.15);
+    transition: all 500ms ease;
+    border-radius: 5px;
+  }
+  
+  .servicioContainer:hover {
+    transform: scale(1.05);
+    background-color: #d4a1b1;
+    box-shadow: 5px 3px 10px 1px rgba(0, 0, 0, 0.4);
+  }
+  
+  @media only screen and (min-width: 770px) {
+    .servicioContainer {
+      margin: 1rem;
+    }
+  }
+  
+  .servcioContenido {
+    margin-top: 0.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .servicioContenido p {
+    padding-bottom: 1em;
+  }
+  
+  .servicioContenido img {
+    width: 240px;
+    transition: all 500ms ease;
+    border-radius: 1em;
+  }
+  
+  @media only screen and (min-width: 770px) {
+    .servicioContenido {
+      flex-direction: row;
+    }
+    .servicioContenido p {
+      padding: 0;
+      padding-right: 1em;
+    }
+    .servicioContenido img {
+      width: 180px;
+    }
+  }
+  
+  /*Estilo de galerias de imagenes*/
+  .galeriaHomeContainer, .galeriaContainer {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  
+  .galeriaHomeContainer div, .galeriaContainer div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  
+  .galeriaHomeContainer img, .galeriaContainer img {
+    width: 100%;
+    height: auto;
+  }
+  
+  @media only screen and (min-width: 770px) {
+    .galeriaHomeContainer, .galeriaContainer {
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+    }
+    .galeriaHomeContainer div:nth-child(1), .galeriaContainer div:nth-child(1) {
+      grid-column: 1 / 3;
+      grid-row: 1 / 3;
+    }
+    .galeriaHomeContainer div:nth-child(9), .galeriaContainer div:nth-child(9) {
+      grid-column: 3 / 5;
+      grid-row: 3 / 5;
+    }
+  }
+  
+  .galeriaContainer {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+  }
+  
+  .galeriaContainer img {
+    transition: all 500ms ease;
+    border: 2px solid #000000;
+  }
+  
+  .galeriaContainer div {
+    padding: 1rem;
+  }
+  
+  @media only screen and (min-width: 770px) {
+    .galeriaContainer {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+    }
+    .galeriaContainer div:nth-child(1) {
+      grid-column: 1;
+      grid-row: 1;
+    }
+    .galeriaContainer div:nth-child(9) {
+      grid-column: 1;
+      grid-row: 3;
+    }
+    .galeriaContainer img:hover {
+      z-index: 100;
+      transform: scale(1.3);
+    }
+  }
+  
+  /* Estilo del footer*/
+  footer {
+    padding-top: 1em;
+    padding-bottom: 0.2em;
+    border-top: 0.1em solid #333333;
+    background-color: #000000;
+  }
+  
+  footer h3 {
+    color: #ffffff;
+    margin-bottom: 0.5em;
+    text-align: center;
+  }
+  
+  footer h4 {
+    text-align: center;
+    color: #ffffff;
+    font-size: 1em;
+    font-weight: 300;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    footer h3 {
+      text-align: left;
+    }
+  }
+  
+  /*redes sociales del footer*/
+  .contenedorFooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 20vh;
+  }
+  
+  .redesFooter {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0.5em;
+  }
+  
+  .redesFooter li {
+    padding: 0 1.5em;
+  }
+  
+  .redesFooter img {
+    width: 2.5em;
+    margin-right: 0.5em;
+  }
+  
+  /* Estilo de secion "Sobre mi" */
+  .bio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1em;
+  }
+  
+  .bio div {
+    background-color: #777777;
+    margin-top: 1em;
+  }
+  
+  .bio img {
+    width: 250px;
+    position: relative;
+    bottom: 15px;
+    left: 15px;
+  }
+  
+  .subtitulo {
+    text-align: center;
+    padding: 1.5rem;
+  }
+  
+  @media only screen and (min-width: 530px) {
+    .bio img {
+      width: 300px;
+    }
+  }
+  
+  @media only screen and (min-width: 770px) {
+    .bio {
+      flex-direction: row;
+    }
+    .bio p {
+      width: 85%;
+      padding-right: 2.5em;
+    }
+    .bio img {
+      width: 350px;
+    }
+  }
+  
+  /* mini biografia del index.html*/
+  .miniBio {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 70%;
+  }
+  
+  .miniBio p {
+    font-size: 1.3em;
+  }
+  
+  /* Estilo de las redes sociales de la seccion de Contacto*/
+  .redesContacto {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  .redesContacto div {
+    background-color: #d4a1b1;
+    border-radius: 50%;
+    padding: 1em;
+    border: 2px solid black;
+  }
+  
+  .redesContacto div:hover {
+    background-color: #a8828e;
+    transition: all 50ms ease-in;
+  }
+  
+  .redesContacto img {
+    width: 40px;
+  }
+  
+  @media all and (min-width: 530px) {
+    .redesContacto img {
+      width: 70px;
+    }
+  }
+  
+  @media all and (min-width: 770px) {
+    .redesContacto img {
+      width: 100px;
+    }
+  }
+  
+  /* NUEVO FORM DE CONTACTO */
+  .contactoContainer {
+    background-color: #d4a1b1;
+  }
+  
+  .contactoContainer .contactoFormImagenContainer img {
+    width: 100px;
+  }
+  
+  @media only screen and (min-width: 768px) {
+    .contactoContainer {
+      background-color: #d4a1b1;
+    }
+    .contactoContainer .contactoFormImagenContainer img {
+      width: 300px;
+    }
+    .contactoContainer h3 {
+      font-size: 3rem;
+      margin: 1rem;
+    }
+  }
+  
+  .marginVertical {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+  }
+  
+  .anchoContenido {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  @media only screen and (min-width: 770px) {
+    .anchoContenido {
+      width: 70%;
+    }
+  }
+  
